# tutorial-evoluindo-sistema

./: .gitignore  README.md  pyproject.toml
docs/: index2.md
migrations/: README  env.py
migrations/versions/: 87941c15f679_mensagem_de_criação.py
slides/: slides.html  slides.md
src/: app.py  config.py  crud.py  database.py  models.py
src/routers/: genre.py  movie.py  schema.py
tests/: conftest.py
tests/src/: test_db.py
tests/src/routers/: test_genre.py  test_movie.py
