[tool.poetry]
name = "tutorial-evoluindo-sistema"
version = "0.1.0"
description = ""
authors = [
    "Renan <renan_assis97@hotmail.com>",
    "Ana Dulce <anadulcepadovan@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.0"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
ruff = "^0.8.0"
taskipy = "^1.14.0"

[tool.ruff]
line-length = 79
indent-width = 4
extend-exclude = ['migrations']

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ['F', 'E', 'W', 'PL', 'N']
fixable = ["ALL"]

[tool.taskipy.tasks]
run = 'fastapi dev src/app.py'
lint = 'ruff check --fix --show-fixes'
format = 'ruff check --select I --fix && ruff format'
test = 'pytest -s -x --cov=fast_zero -vv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
